<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes"
    android:background="@color/yellow_background">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/notes_addItem"
            android:text="+"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:onClick="addNotes"
           />

        <EditText
            android:id="@+id/notes_create_new_note"
            android:hint="@string/insert_note_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/notes_deleteItem"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="deleteNote"
             />
    </RelativeLayout>

    <ListView
        android:scrollbars="vertical"
        android:id="@+id/notes_list"
        android:layout_width="wrap_content"
        android:layout_height="80dp"/>


    <EditText
        android:id="@+id/notes_text"
        android:hint="@string/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>